<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:weightSum="2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent"
              android:gravity="center"
              android:textStyle="bold"
              android:textSize="30sp"
              android:background="@drawable/dialog_title_bar9"
              android:textColor="#ffffff"
              android:text="@string/title_init_dialog"
              android:layout_height="wrap_content"/>
    <EditText android:layout_width="match_parent"
              android:layout_weight="1"
              android:textSize="25sp"
              android:password="true"
              android:hint="@string/init_dg_enter_psw_hint"
              android:id="@+id/et_dg_init_password"
              android:layout_height="0dp"/>
    <EditText android:layout_width="match_parent"
              android:layout_weight="1"
              android:textSize="25sp"
              android:password="true"
              android:hint="@string/init_dg_confirm_psw_hint"
              android:id="@+id/et_dg_confrim_init_password"
              android:layout_height="0dp"/>
    <LinearLayout android:layout_width="match_parent"
                  android:weightSum="2"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="#2B2E2F"
                android:textSize="25sp"
                android:id="@+id/btn_dg_init_password_cancel"
                android:text="@string/cancel_button"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="#2B2E2F"
                android:textSize="25sp"
                android:id="@+id/btn_dg_init_password_confirm"
                android:text="@string/confirm_button"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>