<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <TextView style="@style/titleTheme"
              android:text="@string/security_function_list"/>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:padding="5dp"
                  android:weightSum="3"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:textStyle="italic"
                  android:textColor="#2B2E2F"
                  android:textSize="25sp"
                  android:text="@string/safety_contact_number"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:gravity="center_vertical|right"
                  android:textStyle="italic"
                  android:textColor="#2B2E2F"
                  android:id="@+id/tv_security_function_contact_number"
                  android:textSize="25sp"
                  android:text="contact number"
                  android:layout_height="match_parent"/>

    </LinearLayout>
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/broken_line"/>
    <TextView android:layout_width="match_parent"
              android:padding="3dp"
              android:layout_marginRight="5dp"
              android:layout_marginTop="5dp"
              android:gravity="center_vertical"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:id="@+id/tv_security_function_lock_status"
              android:textSize="25sp"
              android:drawableRight="@drawable/lock"
              android:text="@string/security_protection_is_on_off"
              android:layout_height="wrap_content"/>
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/broken_line"/>
    <TextView android:layout_width="match_parent"
              android:padding="3dp"
              android:layout_marginTop="5dp"
              android:gravity="center_vertical"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:clickable="true"
              android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"
              android:background="@drawable/reset_security_bg"
              android:id="@+id/tv_security_function_reset_settings"
              android:textSize="25sp"
              android:text="@string/enter_security_settings_page_and_edit_settings"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:padding="3dp"
              android:background="#c9c9c9"
              android:layout_marginTop="5dp"
              android:gravity="center_vertical"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:textSize="25sp"
              android:text="@string/security_function_introduction"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:padding="3dp"
              android:drawableLeft="@drawable/star"
              android:layout_marginTop="5dp"
              android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"
              android:gravity="center_vertical"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:id="@+id/tv_security_function_gps_tracking"
              android:textSize="25sp"
              android:text="@string/gps_tracking_location"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:padding="3dp"
              android:drawableLeft="@drawable/star"
              android:layout_marginTop="5dp"
              android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"
              android:gravity="center_vertical"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:id="@+id/tv_security_function_alarm"
              android:textSize="25sp"
              android:text="@string/play_alarm_sound_alarm"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:padding="3dp"
              android:drawableLeft="@drawable/star"
              android:layout_marginTop="5dp"
              android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"
              android:gravity="center_vertical"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:id="@+id/tv_security_function_erase_data"
              android:textSize="25sp"
              android:text="@string/erase_data_erasedata"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:padding="3dp"
              android:drawableLeft="@drawable/star"
              android:layout_marginTop="5dp"
              android:gravity="center_vertical"
              android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:id="@+id/tv_security_function_remote_lock_screen"
              android:textSize="25sp"
              android:text="@string/remote_lock_screen_lockscreen"
              android:layout_height="wrap_content"/>

</LinearLayout>