<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_height="match_parent">
    <TextView style="@style/titleTheme"
              android:text="@string/phone_number_location_inquiry_title"/>
    <EditText android:layout_width="match_parent"
              android:textSize="25sp"
              android:layout_margin="5dp"
              android:textColor="#2B2E2F"
              android:hint="@string/searching_number_hint"
              android:id="@+id/et_tools_location_inquiry"
              android:layout_height="wrap_content"/>
    <Button android:layout_width="wrap_content"
            android:id="@+id/btn_tools_location_inquiry"
            android:text="@string/location_inquiry_button"
            android:layout_marginLeft="5dp"
            android:textColor="#2B2E2F"
            android:textSize="20sp"
            android:background="@drawable/choose_contact_button"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:textSize="25sp"
              android:textColor="#2B2E2F"
              android:layout_margin="5dp"
              android:id="@+id/tv_tools_location_inquiry"
              android:layout_height="wrap_content"/>


</LinearLayout>