<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
              android:orientation="vertical"
                android:layout_height="match_parent">
    <TextView style="@style/titleTheme"
              android:text="@string/missions_manager_title"/>
    <LinearLayout android:layout_width="match_parent"
                  android:weightSum="2"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_gravity="center_vertical|left"
                  android:textSize="13sp"
                  android:id="@+id/tv_missions_manager_mission_number"
                  android:text="Number of Running Missions: "
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:id="@+id/tv_missions_manager_available_ram"
                  android:layout_gravity="center_vertical|right"
                  android:text="Remaining/Total RAM: "
                  android:textSize="13sp"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
<FrameLayout android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="0dp">
    <ListView android:layout_width="match_parent"
              android:id="@+id/lv_missions_manager_list"
              android:layout_height="wrap_content">
    </ListView>
    <TextView android:layout_width="match_parent"
              android:background="#8b8a8a"
              android:textColor="#ffffff"
              android:padding="5dp"
              android:textStyle="bold"
              android:id="@+id/tv_missions_manager_mission_count"
              android:textSize="15sp"
              android:layout_height="wrap_content"/>
</FrameLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:weightSum="4"
                  android:background="#d6d6d6"
                  android:layout_marginBottom="5dp"
                  android:gravity="center"
                  android:layout_height="wrap_content">
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btn_missions_manager_select_all"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/reset_security_bg"
                android:text="@string/select_all_missions"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:id="@+id/btn_missions_manager_reverse_all"
                android:layout_marginRight="5dp"
                android:background="@drawable/reset_security_bg"
                android:text="@string/reverse_all_missions"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="0dp"
                android:textSize="15sp"
                android:id="@+id/btn_missions_manager_clear_all"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/reset_security_bg"
                android:text="@string/clear_all_missions"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btn_missions_manager_settings"
                android:textSize="15sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/reset_security_bg"
                android:text="@string/settings_missions"
                android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>