<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView style="@style/titleTheme"
    android:text="@string/missions_manager_setting_title"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_marginTop="10dp"
                  android:orientation="horizontal"
                  android:id="@+id/ll_missions_manager_mission_settings_hide"
                  android:layout_height="wrap_content">
        <CheckBox android:layout_width="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:clickable="false"
                  android:focusable="false"
                  android:focusableInTouchMode="false"
                  android:id="@+id/cb_missions_manager_mission_settings_hide"
                  android:layout_gravity="center_vertical"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:textSize="18sp"
                  android:layout_marginLeft="5dp"
                  android:gravity="center_vertical"
                  android:textStyle="italic"
                  android:textColor="#2B2E2F"
                  android:id="@+id/tv_missions_manager_mission_settings_hide"
                  android:text="@string/hide_system_missions"
                  android:layout_height="30dp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_marginTop="10dp"
                  android:id="@+id/ll_missions_manager_mission_settings_clear"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <CheckBox android:layout_width="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:clickable="false"
                  android:focusable="false"
                  android:focusableInTouchMode="false"
                  android:id="@+id/cb_missions_manager_mission_settings_clear"
                  android:layout_gravity="center_vertical"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:textSize="18sp"
                  android:layout_marginLeft="5dp"
                  android:gravity="center_vertical"
                  android:textStyle="italic"
                  android:id="@+id/tv_missions_manager_mission_settings_clear"
                  android:textColor="#2B2E2F"
                  android:text="@string/clear_missions_when_lock_the_screen"
                  android:layout_height="30dp"/>
    </LinearLayout>

</LinearLayout>