<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:focusableInTouchMode="true"
              android:focusable="true"
              android:id="@+id/ll_security_settings_view3"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView style="@style/titleTheme"
              android:text="@string/security_settings_title"/>
    <TextView android:layout_width="match_parent"
              android:padding="5dp"
              android:textStyle="italic"
              android:textColor="#2B2E2F"
              android:textSize="18sp"
              android:singleLine="false"
              android:gravity="center_vertical"
              android:text="@string/setting_phone_number_introduction"
              android:layout_height="wrap_content"/>
    <EditText android:layout_width="match_parent"
              android:singleLine="true"
              android:hint="The target number is:"
              android:id="@+id/et_setting_target_phone_number"
              android:layout_height="wrap_content"/>
    <Button android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:textColor="#2B2E2F"
            android:textStyle="bold"
            android:background="@drawable/choose_contact_button"
            android:id="@+id/btn_security_setting_page3_choose_number"
            android:text="@string/choose_number_button"
            android:layout_height="wrap_content"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content"
                   android:background="@drawable/off"
                   android:layout_height="wrap_content"/>
        <ImageView android:layout_width="wrap_content"
                   android:background="@drawable/off"
                   android:layout_height="wrap_content"/>
        <ImageView android:layout_width="wrap_content"
                   android:background="@drawable/on"
                   android:layout_height="wrap_content"/>
        <ImageView android:layout_width="wrap_content"
                   android:background="@drawable/off"
                   android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <ImageView android:layout_width="wrap_content"
                   android:background="@drawable/contact"
                   android:layout_centerInParent="true"
                   android:layout_height="wrap_content"/>
        <Button style="@style/prevButtonTheme"
                android:id="@+id/btn_security_setting_page3_prev"
        />
        <Button style="@style/nextButtonTheme"
                android:id="@+id/btn_security_setting_page3_next"
        />

    </RelativeLayout>

</LinearLayout>